--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="DP.jpg" alt="">
+                    <img class="img-responsive" src="DP.jpg" alt="" height="200" width="200">
                     <div class="intro-text">
                         <span class="name">Ritesh Porey</span>
                         <hr class="star-light">
