Updated About Me

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hi! I am Ritesh Porey and I am a Graduate Student pursuing Master’s in Computer Science at North Carolina State University. Currently I’m in my third semester of my Master’s program.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>I’m actively searching for Full-Time opportunities for a Software Developer Position starting May 2017. I’m much interested in Computer Networks, Network Security and Web Development.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="Ritesh_Resume.pdf" class="btn btn-lg btn-outline">
