--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Projects</a>
+                        <a href="#about">About Me</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About Me</a>
+                        <a href="#portfolio">Projects</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -82,12 +82,37 @@
         </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
+        <!-- About Section -->
+    <section class="success" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Hi! I am Ritesh Porey and I am a Graduate Student pursuing Master’s in Computer Science at North Carolina State University. Currently I’m in my third semester of my Master’s program.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>I’m actively searching for Full-Time opportunities for a Software Developer Position starting May 2017. I’m much interested in Computer Networks, Network Security and Web Development.</p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="Ritesh_Resume.pdf" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download Resume
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Project Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Projects</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -150,31 +175,6 @@
                             </div>
                         </div>
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! I am Ritesh Porey and I am a Graduate Student pursuing Master’s in Computer Science at North Carolina State University. Currently I’m in my third semester of my Master’s program.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>I’m actively searching for Full-Time opportunities for a Software Developer Position starting May 2017. I’m much interested in Computer Networks, Network Security and Web Development.</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="Ritesh_Resume.pdf" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
             </div>
