--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
     </header>
 
-        <!-- About Section -->
-    <section class="success" id="about">
+    <!-- About Section -->
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
@@ -108,12 +108,12 @@
     </section>
 
     <!-- Project Grid Section -->
-    <section id="portfolio">
+    <section id="portfolio" class="success">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Projects</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
