--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Online Magazine Portal/h2>
+                            <h2>Online Magazine Portal</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
                             <p>Developed an online magazine portal through which students and teachers can stay in touch with recent technical trends. Used HTML, JavaScript and CSS for web development and also used Oracle 10g and JSP.</p>
