--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! I am Ritesh Porey and I am a Graduate Student pursuing Master’s in Computer Science at North Carolina State University. Currently I’m in my third semester of my Master’s program.</p>
+                    <p>Hi! I am Ritesh Porey, a graduate student pursuing Master of Science in Computer Science at North Carolina State University. I am actively searching for full-time opportunities, starting May 2017, in Computer Networks, Computer and Network Security and Web Development. 
+</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I’m actively searching for Full-Time opportunities for a Software Developer Position starting May 2017. I’m much interested in Computer Networks, Network Security and Web Development.</p>
+                    <p>I am an avid traveller, an enthusiatic gamer and love the genre of horror. I am passionate about cricket, soccer and play badminton on a regular basis. A skillful and efficient worker, I can deliver and am a go-getter. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="Ritesh_Resume.pdf" class="btn btn-lg btn-outline">
