--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p>I am an avid traveller, an enthusiatic gamer and love the genre of horror. I am passionate about cricket, soccer and play badminton on a regular basis. A skillful and efficient worker, I can deliver and am a go-getter. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="Ritesh_Resume.pdf" class="btn btn-lg btn-outline">
+                    <a href="Ritesh_Resume.pdf" class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
