--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 <a href="https://www.facebook.com/riteshporey" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://plus.google.com/u/2/107161263070921125764" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.instagram.com/riteshporey93/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/RT_da_GaMeR" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
