--- a/index.html
+++ b/index.html
@@ -473,6 +473,20 @@
                                     </strong>
                                 </li>
                             </ul>
+                            <h2>Stationary Management System</h2>
+                            <hr class="star-primary">
+                            <!--<img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">-->
+                            <p>The application provided functionalities like billing, stock information, sales analysis and automatic dispatch of stock. Used Visual Basic 10 and Oracle 10g.</p>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>September 2013
+                                    </strong>
+                                </li>
+                                <li>Domain:
+                                    <strong>Database Management Systems
+                                    </strong>
+                                </li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
