--- a/index.html
+++ b/index.html
@@ -184,6 +184,19 @@
     </section>
 
     <!-- Contact Section -->
+<script>
+    var contactform =  document.getElementById('contactform');
+    contactform.setAttribute('action', '//formspree.io/' + 'rrporey' + '@' + 'ncsu' + '.' + 'edu');
+</script>
+
+<form id="contactform" method="POST">
+    <input type="text" name="name" placeholder="Your name">
+    <input type="email" name="_replyto" placeholder="Your email">
+    <input type="hidden" name="_subject" value="Website contact" />
+    <textarea name="message" placeholder="Your message"></textarea>
+    <input type="text" name="_gotcha" style="display:none" />
+    <input type="submit" value="Send">
+</form>
     <section id="contact">
         <div class="container">
             <div class="row">
